--- a/src/log4j/log4j.properties
+++ b/src/log4j/log4j.properties
@@ -3,6 +3,6 @@ log4j.rootLogger=info,appender1
 #输出到文件(这里默认为追加方式)  
 log4j.appender.appender1=org.apache.log4j.FileAppender
 #设置文件输出路径  
-log4j.appender.appender1.File=D:/MyEclipseWorkspaces/Test/src/log4j/HelloLog4j.log 
+log4j.appender.appender1.File=D\:/\!workspaceMyeclipse2015/Test/src/log4j/HelloLog4j.log 
 #设置文件输出样式  
 log4j.appender.appender1.layout=org.apache.log4j.TTCCLayout 
